--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <!-- start : Header Part -->
+    <header>
+      <!-- start : navbar -->
+      <nav class="navbar">
+        <div class="logo">
+          <h2><span class="logo_name">Flower</span>Shop</h2>
+        </div>
+        <div class="menu_items">
+          <ul class="menu_container">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>More</li>
+          </ul>
+        </div>
+        <div class="search_items">
+          <input type="text" class="search_box" placeholder="Search Flower" />
+          <button class="search_btn">Search</button>
+        </div>
+      </nav>
+      <!-- End : navbar -->
+    </header>
+    <!-- End : Header Part -->
   </body>
 </html>
