banner section completed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
         </div>
       </nav>
       <!-- End : navbar -->
+
+      <!-- start : banner -->
+      <section class="banner">
+        <div class="banner_details">
+          <h1 class="banner_title">
+            Let's make <br />
+            beautiful flowers a <br />
+            part of your life.
+          </h1>
+          <p class="banner_info">
+            A flower is the most beautiful part of a tree or plant. A flower has
+            different colors and fragrances. It is used by the plants for <br />
+            pollination among themselves. The insects suck the nectar from the
+            flowers
+            <br />
+            and in return helps the plants to pollinate.
+          </p>
+          <button class="shop_btn">Shop Now</button>
+        </div>
+        <div class="banner_image">
+          <img src="./images/pngwing 10.png" alt="" />
+        </div>
+      </section>
+      <!-- End : banner -->
     </header>
     <!-- End : Header Part -->
   </body>
