featured flower section completed

--- a/index.html
+++ b/index.html
@@ -54,5 +54,42 @@
       <!-- End : banner -->
     </header>
     <!-- End : Header Part -->
+
+    <!-- Start : main  -->
+    <main>
+      <!-- Start : Featured Section -->
+      <section class="featured_section">
+        <h3 class="featured_flower_title">Our Featured Flowers</h3>
+        <p class="featured_flower_description">
+          A flower is the most beautiful part of a tree or plant. A flower has
+          different colors and fragrances. <br />
+          It is used by the plants for pollination among themselves.
+        </p>
+        <div class="featured_flowers_container">
+          <div class="pink_flower">
+            <img src="./images/pngwing 6.png" class="pink_flower_img" alt="" />
+            <p class="flower_name">Pink Flower Tree</p>
+          </div>
+          <div class="various_flower">
+            <img
+              src="./images/pngwing 5.png"
+              class="various_flower_img"
+              alt=""
+            />
+            <p class="flower_name">Various Flower Tree</p>
+          </div>
+          <div class="yellow_flower">
+            <img
+              src="./images/pngwing 7.png"
+              class="yellow_flower_img"
+              alt=""
+            />
+            <p class="flower_name">Yellow Flower Tree</p>
+          </div>
+        </div>
+      </section>
+      <!-- End : Featured Section -->
+    </main>
+    <!-- End : main -->
   </body>
 </html>
