--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
         </div>
       </section>
       <!-- End : Featured Section -->
+
+      <!-- start : Our services section -->
+      <section class="our_services">
+        <div>
+          <img src="./images/Group 57.png" alt="" />
+          <p>Same Day Delivery. Click & Collect</p>
+        </div>
+        <div>
+          <img src="./images/Group 58.png" alt="" />
+          <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+          <img src="./images/Group 59.png" alt="" />
+          <p>24/7 Free Support.</p>
+        </div>
+      </section>
+      <!-- End : Our services section -->
     </main>
     <!-- End : main -->
   </body>
