hot deals section completed

--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
         </div>
       </section>
       <!-- End : Our services section -->
+
+      <!-- Start : Hot Deal Section -->
+      <section class="hotDeal_section">
+        <div class="hotDeal_details">
+          <h3 class="hotDeal_title">Hot Deal ! Sale Up To 25%</h3>
+          <p class="hotDeal_info">
+            Hot Deals program features specially discounted rates, and hotels
+            participating in this program <br />
+            provide what is known as "merchant inventory"
+          </p>
+          <button class="signUp_btn">Sign Up</button>
+        </div>
+        <div class="hotDeal_image">
+          <img src="./images/pngwing 8.png" alt="" />
+        </div>
+      </section>
+      <!-- End : Hot Deal Section -->
     </main>
     <!-- End : main -->
   </body>
