instagram section completed

--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
         </div>
       </section>
       <!-- End : Hot Deal Section -->
+
+      <!-- Start : Instagram section  -->
+      <section class="instagram_section">
+        <h3 class="instagram_section_title">Instagram</h3>
+        <p class="instagram_section_details">
+          Instagram is a free photo and video sharing app available on iPhone
+          and Android. <br />
+          You guys also can follow us on Instagram
+        </p>
+        <div class="images">
+          <img src="./images/Flower 01.png" alt="" />
+          <img src="./images/Rectangle 4.png" alt="" />
+          <img src="./images/Rectangle 5.png" alt="" />
+          <img src="./images/Rectangle 6.png" alt="" />
+        </div>
+      </section>
+      <!-- End : Instagram section -->
     </main>
     <!-- End : main -->
   </body>
