latest deals section completed

--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
         </div>
       </section>
       <!-- End : Instagram section -->
+
+      <!-- Start : Latest Deals -->
+      <section class="latest_deals_section">
+        <div>
+          <h2 class="latest_deals_title">Get The Latest Deals</h2>
+          <p class="latest_deals_details">$30 Coupon for first shopping</p>
+          <input
+            type="email"
+            class="email_box"
+            placeholder="Enter your email here"
+          />
+          <button class="subscribe_btn">Subscribe</button>
+        </div>
+      </section>
+      <!-- End : Latest Deals  -->
     </main>
     <!-- End : main -->
   </body>
