--- a/index.html
+++ b/index.html
@@ -157,5 +157,24 @@
       <!-- End : Latest Deals  -->
     </main>
     <!-- End : main -->
+
+    <!-- Start : Footer -->
+    <footer class="footer">
+      <div>
+        <h1>
+          <span class="logo_name">Flower</span
+          ><span class="footer_span">Shop</span>
+        </h1>
+        <p class="footer_details">
+          A flower is the most beautiful part of a tree or plant. A flower has
+          different colors and fragrances. <br />
+          It is used by the plants for pollination among themselves.
+        </p>
+        <p class="copyright_text">
+          @2020-2023, FlowerShop.com. All rights reserved.
+        </p>
+      </div>
+    </footer>
+    <!-- End : Footer -->
   </body>
 </html>
